2nd update adding css to the site

--- a/index.html
+++ b/index.html
@@ -2,75 +2,66 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My first project!</title>
+    <title>Vinson's Resume</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="circle-cropped.png" alt="messi" height="200" width="200">
+          <img src="vinson-circle-cropped.png" alt="messi" height="200" width="200">
         </td>
         <td>
           <h1>Vinson Xavier</h1>
-          <p><em>Hello I'am a gamer and a <strong>programmer</strong>.</em></p>
+          <p><em>Student in <strong><a href="https://www.svce.ac.in/">Sri Venkateswara College of Engineering</a></strong>.</em></p>
+          <br>
+          <p>I am an ECE student in SVCE. I love gaming and sports.</p>
         </td>
     </tr>
   </table>
     <hr size='3' noshade>
-    <h3>Games:</h3>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>TIME</th><th>GAME</th>
-        </tr>
-      </thead>
-      <tbody>
 
-      </tbody>
-      <tfoot>
 
-      </tfoot>
+    <h3>Education:</h3>
+    <table cellspacing='10'>
       <tr>
-        <td>past</td><td>Clash of clans</td>
+        <th>Time</th><th>Education</th>
       </tr>
       <tr>
-        <td>Present</td><td>FIFA 21</td>
+        <td>2017</td><td>10th SSLC</td>
       </tr>
       <tr>
-        <td>future</td><td>FIFA 22</td>
+        <td>2019</td><td>12th SSLC</td>
+      </tr>
+      <tr>
+        <td>2019-2023</td><td>BE, ECE, SVCE</td>
       </tr>
     </table>
     <hr size='3' noshade>
-    <h3>Hobbies:</h3>
+    <h3>Areas of Intrest:</h3>
     <ol>
-      <li>Gaming</li>
-      <li>Coding</li>
-      <li>Feeling</li>
+      <li>Intermediate Python</li>
+      <li>Basic Web Development</li>
+      <li>Basic Problem Solving</li>
     </ol>
     <hr size="3" noshade>
 
+
     <h3>Skills:</h3>
-    <table cellspacing='15'>
+    <table cellspacing='5'>
       <tr>
-        <td>Python</td><td>⭐⭐⭐</td>
+        <td>Python</td><td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>PHP</td><td>⭐⭐</td>
+        <td>Web Development</td><td>⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>FIFA</td><td>⭐⭐⭐⭐</td>
+        <td>Problem Solving</td><td>⭐⭐⭐</td>
       </tr>
     </table>
     <hr size="3" noshade>
 
-    <h3>Feedback and Contact:</h3>
-    <form class="" action="mailto:vinsonxavier12@gmail.com" method="post" enctype="text/plain">
-        <label>Your name: </label>
-        <input type="text" name="userName" value=""><br>
-        <label>Your Email: </label>
-        <input type="email" name="userEmail" value=""><br>
-        <textarea name="userText" rows="10" cols="40"></textarea><br>
-        <input type="submit" name="" value="Submit">
-    </form>
+
+    <h3><a href="contact-me.html">Feedback and Contact:</a></h3>
   </body>
 </html>
